--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "phpoffice/phpword": "^0.17.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
